--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,74 @@
-.App {
+body {
+}
+
+
+.header-container {
+  background: url('./images/sopris-summit-small.jpg') no-repeat fixed;
+  background-size: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background-position: top;
+  position:
+}
+
+#card-grid-container {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.card {
+  display: flex;
+  align-items: center;
+  flex: 0 1 50%;
+  box-sizing: border-box;
+  min-height: 300px;
+}
+
+.content-card {
+  padding-left: 25px;
+}
+
+.card-hover {
+  display: none;
+  width: 90%;
+  height: 90%;
+  margin: 0 auto;
+}
+
+.card0 {
+  background: url('./images/stash-tracker/stash-tracker-screenshot.png') no-repeat;
+  background-size: 100%;
+}
+
+.card0-hover {
+  background: rgba(189, 102, 21, 0.68);
+}
+
+.card1 {
+  background: #bd6615;
+}
+
+.card2 {
+  background: #65ade2;
+}
+
+.card3-hover {
+  background: rgba(101, 173, 226, 0.68);
+}
+
+.card5 {
+  background: #e3dc2e;
+}
+
+.img-card:hover > .card-hover {
+  display: block;
+}
+
+
+
+
+/*.App {
   text-align: center;
 }
 
@@ -21,4 +91,4 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
-}
+}*/
