--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,8 @@ body {
 
 .card-hover {
   display: none;
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
 }
 
@@ -65,6 +65,9 @@ body {
   display: block;
 }
 
+.logo {
+  background-image: url('./icons/image-round.svg')
+}
 
 
 
