--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,3 @@
-@import './card.scss';
-@import './variables';
-
 
 body, html {
   font-family: 'Montserrat', sans-serif;
@@ -27,6 +24,35 @@ body, html {
   margin-left: 20px;
   position: absolute;
   top: 25vh;
+}
+
+.header-container {
+  background: url('../images/sopris-summit-small.jpg') no-repeat fixed;
+  background-size: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background-position: top;
+}
+
+#card-grid-container {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.header-icons-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  right: 30px;
+  top: 30px;
+}
+
+.header-link svg {
+  margin: 10px;
+  width: 75px;
+  height: 75px;
 }
 
 
