--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,29 +1,49 @@
 body, html {
-  font-family: 'Montserrat', sans-serif;
-}
+  font-family: 'Montserrat', sans-serif; }
 
 h1 {
   font-family: 'Fira Sans', sans-serif;
   font-size: 64px;
   font-weight: 600;
-  text-shadow: 2px 2px 2px #FFF;
-}
+  text-shadow: 2px 2px 2px #FFF; }
 
 h3 {
   font-size: 30px;
   font-weight: 300;
-  text-shadow: 2px 2px 2px #FFF;
-}
+  text-shadow: 2px 2px 2px #FFF; }
 
 body, html {
- margin: 0;
-}
+  margin: 0; }
 
 .titles-container {
   margin-left: 20px;
   position: absolute;
-  top: 25vh;
-}
+  top: 25vh; }
+
+.header-container {
+  background: url("../images/sopris-summit-small.jpg") no-repeat fixed;
+  background-size: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background-position: top; }
+
+#card-grid-container {
+  display: flex;
+  flex-flow: row wrap; }
+
+.header-icons-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  right: 30px;
+  top: 30px; }
+
+.header-link svg {
+  margin: 10px;
+  width: 75px;
+  height: 75px; }
 
 /*header {
   display: flex;
@@ -36,3 +56,51 @@ body, html {
 #header-title, #header-sub-title1 {
   color: #FFF;
 }*/
+.card {
+  display: flex;
+  align-items: center;
+  flex: 0 1 50%;
+  box-sizing: border-box;
+  min-height: 300px; }
+
+.content-card {
+  padding-left: 25px; }
+
+.card-hover {
+  display: none;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto; }
+
+.card0 {
+  background: url("../images/stash-tracker/stash-tracker-screenshot.png") no-repeat;
+  background-size: 100%; }
+
+.card0-hover {
+  background: rgba(189, 102, 21, 0.68); }
+
+.card1 {
+  background: #bd6615; }
+
+.card2 {
+  background: #65ade2; }
+
+.card3-hover {
+  background: rgba(101, 173, 226, 0.68); }
+
+.card5 {
+  background: #e3dc2e; }
+
+.img-card:hover > .card-hover {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.card-icon-container {
+  display: flex;
+  justify-content: space-around;
+  width: 60%; }
+
+.card-link svg {
+  width: 75px;
+  height: 75px; }
