--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,19 +1,20 @@
+@import './variables.scss';
 
 body, html {
-  font-family: 'Montserrat', sans-serif;
+  font-family: $font-text;
 }
 
 h1 {
-  font-family: 'Fira Sans', sans-serif;
+  font-family: $font-header;
   font-size: 64px;
   font-weight: 600;
-  text-shadow: 2px 2px 2px #FFF;
+  text-shadow: 0 0 6px #FFF;
 }
 
 h3 {
   font-size: 30px;
   font-weight: 300;
-  text-shadow: 2px 2px 2px #FFF;
+  text-shadow: 0 0 6px #FFF;
 }
 
 body, html {
