--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,16 +1,16 @@
 body, html {
-  font-family: 'Montserrat', sans-serif; }
+  font-family: "Montserrat"; }
 
 h1 {
-  font-family: 'Fira Sans', sans-serif;
+  font-family: "Fira Sans";
   font-size: 64px;
   font-weight: 600;
-  text-shadow: 2px 2px 2px #FFF; }
+  text-shadow: 0 0 6px #FFF; }
 
 h3 {
   font-size: 30px;
   font-weight: 300;
-  text-shadow: 2px 2px 2px #FFF; }
+  text-shadow: 0 0 6px #FFF; }
 
 body, html {
   margin: 0; }
