--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  // position: relative;
-  // top: 0;
+  position: relative;
+  top: 0;
   // z-index: 1;
 }
 
@@ -18,6 +18,5 @@
 
 .fixed-header {
   position: fixed;
-  // top: 0;
   box-shadow: 0 5px rgba(0, 0, 0, 0.1);
 }
