--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,7 +49,9 @@ body, html {
 .header-container {
   display: flex;
   justify-content: space-around;
-  align-items: center; }
+  align-items: center;
+  position: relative;
+  top: 0; }
 
 .header-label {
   margin: 10px; }
