--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,11 +1,17 @@
 
 .header-container {
+  width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  position: relative;
   top: 0;
-  // z-index: 1;
+  position: relative;
+  z-index: 1;
+}
+
+.header-container-fixed {
+  position: fixed;
+  box-shadow: 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .header-label {
@@ -14,9 +20,4 @@
 
 .header-link svg, .header-link {
   font-size: 0;
-}
-
-.fixed-header {
-  position: fixed;
-  box-shadow: 0 5px rgba(0, 0, 0, 0.1);
 }
