--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,15 +6,18 @@ body, html {
 
 h1 {
   font-family: $font-header;
-  font-size: 64px;
-  font-weight: 600;
-  text-shadow: 0 0 6px #FFF;
+  font-size: 40px;
+  font-weight: $weight-header;
+  // text-shadow: 0 0 6px #FFF;
+  margin-top: 20px;
+  margin-bottom: 0;
 }
 
 h3 {
-  font-size: 30px;
-  font-weight: 300;
-  text-shadow: 0 0 6px #FFF;
+  font-size: 18px;
+  font-weight: $weight-text;
+  // text-shadow: 0 0 6px #FFF;
+  margin: 6px auto;
 }
 
 body, html {
@@ -22,9 +25,14 @@ body, html {
 }
 
 .titles-container {
-  margin-left: 20px;
+  margin-left: 12%;
+  margin-top: 6%;
   position: absolute;
-  top: 5vh;
+  text-align: right;
+}
+
+#sub-title1 {
+  margin-top: 0;
 }
 
 .hero-container {
@@ -52,7 +60,7 @@ body, html {
 }
 
 .text-about, .text-me {
-  color: rgba(100,100,100,0.9);
+  color: rgba(100, 100, 100, 0.9);
   font-size: 25px;
   margin: 0;
 }
