--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,22 +3,27 @@ body, html {
 
 h1 {
   font-family: "Fira Sans";
-  font-size: 64px;
+  font-size: 40px;
   font-weight: 600;
-  text-shadow: 0 0 6px #FFF; }
+  margin-top: 20px;
+  margin-bottom: 0; }
 
 h3 {
-  font-size: 30px;
+  font-size: 18px;
   font-weight: 300;
-  text-shadow: 0 0 6px #FFF; }
+  margin: 6px auto; }
 
 body, html {
   margin: 0; }
 
 .titles-container {
-  margin-left: 20px;
+  margin-left: 12%;
+  margin-top: 6%;
   position: absolute;
-  top: 5vh; }
+  text-align: right; }
+
+#sub-title1 {
+  margin-top: 0; }
 
 .hero-container {
   background: url("../images/sopris-summit-small.jpg") no-repeat fixed;
