--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,21 +1,45 @@
+@import './variables.scss';
 
 .header-container {
-  width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   top: 0;
-  position: relative;
-  z-index: 1;
+  padding: 8px 15px;
+  // position: relative;
+  // z-index: 1;
 }
 
 .header-container-fixed {
   position: fixed;
+  width: 100%;
   box-shadow: 0 5px rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.95);
+  .header-name {
+    color: #FFF;
+  }
+  .header-title {
+    color: #FFF;
+  }
+  .header-label svg {
+    fill: #FFF;
+  }
+}
+
+.header-right-div, .header-left-div {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.header-name {
+  font-family: $font-header;
+  font-weight: $weight-header;
 }
 
 .header-label {
   margin: 10px;
+  font-size: 0;
 }
 
 .header-link svg, .header-link {
