--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -89,12 +89,17 @@ body, html {
 .card {
   display: flex;
   align-items: center;
-  flex: 0 1 50%;
   box-sizing: border-box;
-  min-height: 300px; }
+  flex: 0 1 50%;
+  height: auto; }
+
+.card:before {
+  content: '';
+  float: left;
+  padding-top: 100%; }
 
 .content-card {
-  padding-left: 25px; }
+  padding: 25px; }
 
 .card-hover {
   display: none;
@@ -103,8 +108,19 @@ body, html {
   margin: 0 auto; }
 
 .card0 {
-  background: url("../images/stash-tracker/stash-tracker-screenshot.png") no-repeat;
-  background-size: 100%; }
+  background: url("../images/stash-tracker/stash-tracker-screenshot.png");
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.card3 {
+  background: url("../images/weatherly/weatherly1.png");
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.card4 {
+  background: url("../images/movie-tracker/movie-tracker-screenshot.png");
+  background-size: cover;
+  background-repeat: no-repeat; }
 
 .card0-hover {
   background: rgba(189, 102, 21, 0.68); }
@@ -117,6 +133,9 @@ body, html {
 
 .card3-hover {
   background: rgba(101, 173, 226, 0.68); }
+
+.card4-hover {
+  background: rgba(227, 220, 46, 0.68); }
 
 .card5 {
   background: #e3dc2e; }
@@ -134,6 +153,22 @@ body, html {
 .card-link svg {
   width: 75px;
   height: 75px; }
+
+@media screen and (min-width: 1200px) {
+  .card {
+    flex: 0 1 33.33%; }
+  .card0 {
+    order: 0; }
+  .card1 {
+    order: 1; }
+  .card2 {
+    order: 5; }
+  .card3 {
+    order: 2; }
+  .card4 {
+    order: 4; }
+  .card5 {
+    order: 3; } }
 
 .aboutMe-container {
   background: url("../images/trees1.jpg");
