--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  flex: 0 1 50%;
+  flex: 0 1 100%;
   height: auto;
 }
 
@@ -24,39 +24,24 @@
   margin: 0 auto;
 }
 
-.card0 {
-  background: url('../images/stash-tracker/stash-tracker-screenshot.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-}
+.card0 {background: url('../images/stash-tracker/stash-tracker-screenshot.png');}
+.card2 {background: url('../images/weatherly/weatherly1.png');}
+.card4 {background: url('../images/movie-tracker/movie-tracker-screenshot.png');}
+.card6 {background: url('../images/madtalk/madtalk2.png');}
 
-.card3 {
-  background: url('../images/weatherly/weatherly1.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.card4 {
-  background: url('../images/movie-tracker/movie-tracker-screenshot.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.card7 {
-  background: url('../images/madtalk/madtalk2.png');
+.img-card {
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .card0-hover { background: rgba(189, 102, 21, 0.68); }
-.card1 { background: #bd6615; }
-.card2 { background: #65ade2; }
-.card3-hover { background: rgba(101, 173, 226, 0.68); }
+.card1 { background: rgba(189, 102, 21, 1); }
+.card2-hover { background: rgba(101, 173, 226, 0.68); }
+.card3 { background: rgba(101, 173, 226, 1); }
 .card4-hover { background: rgba(227, 220, 46, 0.68); }
-.card5 { background: #e3dc2e; }
-.card6 { background: rgba(226, 2, 3, 1); }
-.card7-hover { background: rgba(226, 2, 3, 0.68); }
-
+.card5 { background: rgba(227, 220, 46, 1); }
+.card6-hover { background: rgba(226, 2, 3, 0.68); }
+.card7 { background: rgba(226, 2, 3, 1); }
 
 .img-card:hover > .card-hover {
   display: flex;
@@ -76,6 +61,22 @@
 }
 
 
+@media screen and (min-width: 550px) {
+  .card {
+    flex: 0 1 50%;
+  }
+
+  .card0 { order: 0 };
+  .card1 { order: 1 };
+  .card2 { order: 3 };
+  .card3 { order: 2 };
+  .card4 { order: 4 };
+  .card5 { order: 5 };
+  .card6 { order: 7 };
+  .card7 { order: 6 };
+
+}
+
 @media screen and (min-width: 1200px) {
   .card {
     flex: 0 1 33.33%;
@@ -83,10 +84,11 @@
 
   .card0 { order: 0 };
   .card1 { order: 1 };
-  .card2 { order: 5 };
-  .card3 { order: 2 };
+  .card2 { order: 2 };
+  .card3 { order: 5 };
   .card4 { order: 4 };
   .card5 { order: 3 };
-
+  .card6 { order: 6 };
+  .card7 { order: 7 };
 
 }
