--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -90,7 +90,7 @@ body, html {
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  flex: 0 1 50%;
+  flex: 0 1 100%;
   height: auto; }
 
 .card:before {
@@ -108,22 +108,18 @@ body, html {
   margin: 0 auto; }
 
 .card0 {
-  background: url("../images/stash-tracker/stash-tracker-screenshot.png");
-  background-size: cover;
-  background-repeat: no-repeat; }
+  background: url("../images/stash-tracker/stash-tracker-screenshot.png"); }
 
-.card3 {
-  background: url("../images/weatherly/weatherly1.png");
-  background-size: cover;
-  background-repeat: no-repeat; }
+.card2 {
+  background: url("../images/weatherly/weatherly1.png"); }
 
 .card4 {
-  background: url("../images/movie-tracker/movie-tracker-screenshot.png");
-  background-size: cover;
-  background-repeat: no-repeat; }
+  background: url("../images/movie-tracker/movie-tracker-screenshot.png"); }
 
-.card7 {
-  background: url("../images/madtalk/madtalk2.png");
+.card6 {
+  background: url("../images/madtalk/madtalk2.png"); }
+
+.img-card {
   background-size: cover;
   background-repeat: no-repeat; }
 
@@ -133,11 +129,11 @@ body, html {
 .card1 {
   background: #bd6615; }
 
-.card2 {
-  background: #65ade2; }
-
-.card3-hover {
+.card2-hover {
   background: rgba(101, 173, 226, 0.68); }
+
+.card3 {
+  background: #65ade2; }
 
 .card4-hover {
   background: rgba(227, 220, 46, 0.68); }
@@ -145,11 +141,11 @@ body, html {
 .card5 {
   background: #e3dc2e; }
 
-.card6 {
-  background: #e20203; }
-
-.card7-hover {
+.card6-hover {
   background: rgba(226, 2, 3, 0.68); }
+
+.card7 {
+  background: #e20203; }
 
 .img-card:hover > .card-hover {
   display: flex;
@@ -165,6 +161,26 @@ body, html {
   width: 75px;
   height: 75px; }
 
+@media screen and (min-width: 550px) {
+  .card {
+    flex: 0 1 50%; }
+  .card0 {
+    order: 0; }
+  .card1 {
+    order: 1; }
+  .card2 {
+    order: 3; }
+  .card3 {
+    order: 2; }
+  .card4 {
+    order: 4; }
+  .card5 {
+    order: 5; }
+  .card6 {
+    order: 7; }
+  .card7 {
+    order: 6; } }
+
 @media screen and (min-width: 1200px) {
   .card {
     flex: 0 1 33.33%; }
@@ -173,13 +189,17 @@ body, html {
   .card1 {
     order: 1; }
   .card2 {
-    order: 5; }
-  .card3 {
     order: 2; }
+  .card3 {
+    order: 5; }
   .card4 {
     order: 4; }
   .card5 {
-    order: 3; } }
+    order: 3; }
+  .card6 {
+    order: 6; }
+  .card7 {
+    order: 7; } }
 
 .aboutMe-container {
   background: url("../images/trees1.jpg");
