--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -40,8 +40,9 @@ body, html {
   background-size: cover;
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: calc(100vh + 50px);
   background-position: top;
+  position: relative;
 }
 
 #card-grid-container {
