--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,3 +6,7 @@ $font-text: 'Montserrat';
 $weight-text: 300;
 
 // COLORS
+$primary-orange: rgb(189, 102, 21);
+$primary-yellow: rgb(227, 220, 46);
+$primary-blue: rgb(101, 173, 226);
+$primary-red: rgb(226, 2, 3);
