style aboutme page

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -50,7 +50,7 @@
 
 .header-name {
   font-family: $font-header;
-  font-weight: $weight-header;
+  font-weight: 500;
   color: #FFF;
   margin: 0;
 }
