--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,6 +13,12 @@ h3 {
   font-weight: 300;
   margin: 6px auto; }
 
+h4 {
+  margin: 8px 0; }
+
+h5 {
+  margin: 3px 0; }
+
 body, html {
   margin: 0; }
 
