--- a/src/styles/aboutMe.scss
+++ b/src/styles/aboutMe.scss
@@ -13,6 +13,104 @@
   width: 95%;
   max-width: 800px;
   margin: 0 auto;
+}
+
+.aboutMe-div {
+  background: rgba(255, 255, 255, 0.9);
   padding: 20px;
-  background: rgba(255, 255, 255, 0.9)
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.aboutMe-header {
+  text-align: center;
+  margin: 10px;
+}
+
+.aboutMe-summary-container {
+  text-align: center;
+  .aboutMe-summary-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .aboutMe-profilePic {
+      margin: 5px;
+      width: 100px;
+    }
+    .aboutMe-titles {
+      margin-left: 10px;
+      text-align: left;
+      h3 {
+        font-weight: 500;
+      }
+    }
+  }
+  .aboutMe-summary {
+    margin: 10px 0 0 0;
+    text-align: left;
+  }
+}
+
+.aboutMe-projects-container h4 {
+  text-align: center;
+}
+
+.aboutMe-linkHome {
+  text-decoration: none;
+}
+
+.education-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  h4 {
+    margin-right: 2px;
+    text-align: left;
+  }
+  h5 {
+    margin-left: 2px;
+    text-align: right;
+  }
+}
+
+.aboutMe-progskills {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  h4 {
+    margin: 10px;
+  }
+}
+
+.aboutMe-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.aboutMe-lifeskills-left {
+  width: 48%;
+  h3 {
+    text-align: center;
+  }
+  h4 {
+    margin-right: 2px;
+    text-align: center;
+  }
+}
+
+.aboutMe-lifeskills-right {
+  width: 48%;
+  h3 {
+    text-align: center;
+  }
+  h4 {
+    margin-left: 2px;
+    text-align: center;
+  }
+
+}
+
+.aboutMe-contact-container h4 {
+  text-align: center;
 }
