--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,12 @@ h3 {
   font-weight: 300;
   margin: 6px auto; }
 
+h4 {
+  margin: 8px 0; }
+
+h5 {
+  margin: 3px 0; }
+
 body, html {
   margin: 0; }
 
@@ -77,7 +83,7 @@ body, html {
 
 .header-name {
   font-family: "Fira Sans";
-  font-weight: 600;
+  font-weight: 500;
   color: #FFF;
   margin: 0; }
 
@@ -250,6 +256,79 @@ body, html {
 .aboutMe-content {
   width: 95%;
   max-width: 800px;
-  margin: 0 auto;
+  margin: 0 auto; }
+
+.aboutMe-div {
+  background: rgba(255, 255, 255, 0.9);
   padding: 20px;
-  background: rgba(255, 255, 255, 0.9); }
+  margin-top: 25px;
+  margin-bottom: 25px; }
+
+.aboutMe-header {
+  text-align: center;
+  margin: 10px; }
+
+.aboutMe-summary-container {
+  text-align: center; }
+  .aboutMe-summary-container .aboutMe-summary-header {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .aboutMe-summary-container .aboutMe-summary-header .aboutMe-profilePic {
+      margin: 5px;
+      width: 100px; }
+    .aboutMe-summary-container .aboutMe-summary-header .aboutMe-titles {
+      margin-left: 10px;
+      text-align: left; }
+      .aboutMe-summary-container .aboutMe-summary-header .aboutMe-titles h3 {
+        font-weight: 500; }
+  .aboutMe-summary-container .aboutMe-summary {
+    margin: 10px 0 0 0;
+    text-align: left; }
+
+.aboutMe-projects-container h4 {
+  text-align: center; }
+
+.aboutMe-linkHome {
+  text-decoration: none; }
+
+.education-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+  .education-div h4 {
+    margin-right: 2px;
+    text-align: left; }
+  .education-div h5 {
+    margin-left: 2px;
+    text-align: right; }
+
+.aboutMe-progskills {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; }
+  .aboutMe-progskills h4 {
+    margin: 10px; }
+
+.aboutMe-wrapper {
+  display: flex;
+  justify-content: space-between; }
+
+.aboutMe-lifeskills-left {
+  width: 48%; }
+  .aboutMe-lifeskills-left h3 {
+    text-align: center; }
+  .aboutMe-lifeskills-left h4 {
+    margin-right: 2px;
+    text-align: center; }
+
+.aboutMe-lifeskills-right {
+  width: 48%; }
+  .aboutMe-lifeskills-right h3 {
+    text-align: center; }
+  .aboutMe-lifeskills-right h4 {
+    margin-left: 2px;
+    text-align: center; }
+
+.aboutMe-contact-container h4 {
+  text-align: center; }
