--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -103,9 +103,17 @@ body, html {
   width: 45px;
   height: 45px; }
 
-.header-link:hover svg {
-  fill: #bd6615;
-  box-shadow: 0 0 8px rgba(189, 102, 21, 0.8); }
+.label-github:hover svg {
+  fill: #4078c0;
+  box-shadow: 0 0 8px rgba(64, 120, 192, 0.8); }
+
+.label-linkedIn:hover svg {
+  fill: #1178b3;
+  box-shadow: 0 0 8px rgba(17, 120, 179, 0.8); }
+
+.label-twitter:hover svg {
+  fill: #2aa3ef;
+  box-shadow: 0 0 8px rgba(42, 163, 239, 0.8); }
 
 .link-aboutMe:hover {
   background: #bd6615;
