--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -268,13 +268,17 @@ body, html {
 
 .aboutMe-div {
   background: rgba(255, 255, 255, 0.9);
-  padding: 20px;
-  margin-top: 25px;
-  margin-bottom: 25px; }
+  padding: 45px 20px; }
 
 .aboutMe-header {
   text-align: center;
   margin: 10px; }
+
+.aboutMe-underline {
+  box-sizing: border-box;
+  border-bottom: 2px solid rgba(189, 102, 21, 0.4);
+  width: 30%;
+  margin: 0 auto 15px auto; }
 
 .aboutMe-summary-container {
   text-align: center; }
@@ -291,7 +295,7 @@ body, html {
       .aboutMe-summary-container .aboutMe-summary-header .aboutMe-titles h3 {
         font-weight: 500; }
   .aboutMe-summary-container .aboutMe-summary {
-    margin: 10px 0 0 0;
+    margin: 10px 25px 0 25px;
     text-align: left; }
 
 .aboutMe-projects-container h4 {
