--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  flex: 0 1 100%;
+  flex: 0 1 33.33%;
   height: auto; }
 
 .card:before {
@@ -73,7 +73,31 @@
   width: 75px;
   height: 75px; }
 
-@media screen and (min-width: 550px) {
+.card0 {
+  order: 0; }
+
+.card1 {
+  order: 1; }
+
+.card2 {
+  order: 2; }
+
+.card3 {
+  order: 5; }
+
+.card4 {
+  order: 4; }
+
+.card5 {
+  order: 3; }
+
+.card6 {
+  order: 6; }
+
+.card7 {
+  order: 7; }
+
+@media screen and (max-width: 1200px) {
   .card {
     flex: 0 1 50%; }
   .card0 {
@@ -93,9 +117,9 @@
   .card7 {
     order: 6; } }
 
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 750px) {
   .card {
-    flex: 0 1 33.33%; }
+    flex: 0 1 100%; }
   .card0 {
     order: 0; }
   .card1 {
@@ -103,11 +127,11 @@
   .card2 {
     order: 2; }
   .card3 {
-    order: 5; }
+    order: 3; }
   .card4 {
     order: 4; }
   .card5 {
-    order: 3; }
+    order: 5; }
   .card6 {
     order: 6; }
   .card7 {
