--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -96,7 +96,7 @@
 
 .label-hamburger:hover svg {
   fill: $primary-orange;
-  box-shadow: 0 0 20px rgba(189, 102, 21, 0.8);
+  // box-shadow: 0 0 20px rgba(189, 102, 21, 0.8);
 }
 
 .link-aboutMe {
@@ -125,12 +125,17 @@
 
 @media screen and (max-width: 600px) {
 
-  .label-mobile {
+  .header-container-fixed .label-mobile {
     display: unset;
   }
 
-  .label-desktop {
+  .header-container-fixed .label-desktop {
     display: none;
   }
+
+  // .label-mobile:hover + .label-desktop {
+  //   background: blue;
+  //   // display: unset;
+  // }
 
 }
