--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -43,6 +43,13 @@ body, html {
   display: flex;
   flex-flow: row wrap; }
 
+.hero-container, #card-grid-container {
+  max-width: 2500px;
+  margin: 0 auto; }
+
+#app-container {
+  background: #bd6615; }
+
 .header-container {
   display: flex;
   justify-content: space-between;
@@ -141,11 +148,30 @@ body, html {
   color: #bd6615;
   text-shadow: 0 0 4px #bd6615; }
 
+@media screen and (max-width: 900px) {
+  .titles-container {
+    margin-left: 5%; }
+  #title {
+    font-size: 30px; }
+  .sub-title {
+    font-size: 15px; } }
+
 @media screen and (max-width: 600px) {
   .header-container-fixed .label-mobile {
     display: unset; }
   .header-container-fixed .label-desktop {
     display: none; } }
+
+@media screen and (max-width: 550px) {
+  .titles-container {
+    margin-left: 4%;
+    margin-top: 0%;
+    text-align: left; }
+  #title {
+    font-size: 30px;
+    margin-top: 10px; }
+  .sub-title {
+    font-size: 15px; } }
 
 .card {
   display: flex;
