--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -32,6 +32,8 @@ body, html {
  margin: 0;
 }
 
+
+
 .titles-container {
   margin-left: 11%;
   margin-top: 5%;
@@ -55,4 +57,13 @@ body, html {
 #card-grid-container {
   display: flex;
   flex-flow: row wrap;
+}
+
+.hero-container, #card-grid-container {
+  max-width: 2500px;
+  margin: 0 auto;
+}
+
+#app-container {
+  background: $primary-orange;
 }
