--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -323,7 +323,7 @@ body, html {
 .aboutMe-content {
   width: 95%;
   max-width: 800px;
-  margin: 0 auto; }
+  margin: 25px auto 0 auto; }
 
 .aboutMe-div {
   background: rgba(255, 255, 255, 0.9);
