make backgound images black and white and blutted

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -32,7 +32,7 @@ body, html {
   margin-top: 0; }
 
 .hero-container {
-  background: url("../images/sopris-summit-small.jpg") no-repeat fixed;
+  background: url("../images/sopris-bw-blurred.JPG") no-repeat fixed;
   background-size: cover;
   margin: 0;
   padding: 0;
