--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -46,7 +46,7 @@ body, html {
 }
 
 .hero-container {
-  background: url('../images/sopris-summit-small.jpg') no-repeat fixed;
+  background: url('../images/sopris-bw-blurred.JPG') no-repeat fixed;
   background-size: cover;
   margin: 0;
   padding: 0;
