--- a/src/styles/aboutMe.scss
+++ b/src/styles/aboutMe.scss
@@ -1,7 +1,7 @@
 
 
 .aboutMe-container {
-  background: url('../images/trees1.jpg');
+  background: url('../images/trees-bw2.JPG');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -18,8 +18,6 @@
 .aboutMe-div {
   background: rgba(255, 255, 255, 0.9);
   padding: 45px 20px;
-  // margin-top: 25px;
-  // margin-bottom: 25px;
 }
 
 .aboutMe-header {
