--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -64,6 +64,10 @@
   justify-content: center;
   align-items: center; }
 
+.card-hover label:hover {
+  transform: scale(1.05);
+  transition: all 0.1s ease-in-out; }
+
 .card-icon-container {
   display: flex;
   justify-content: space-around;
